changing the src folder

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ li {
 }
 
 footer {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/universe.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/universe.jpg);
     height: auto;
     min-width: 100%;
     background-position: center;
